style: apply opening animation on the main heading

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         </div>
 
         <div class="text-box">
-            <h1 class="heading-primary">Outdoors <span class="heading-primary-sub">is where life happens</span></h1>
+            <h1 class="heading-primary">
+                <span class="heading-primary-head">Outdoors</span>
+                <span class="heading-primary-sub">is where life
+                    happens</span>
+            </h1>
         </div>
 
     </header>
