--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                 <span class="heading-primary-sub">is where life
                     happens</span>
             </h1>
+
+            <a class="btn btn-white btn-hero" href="#">Discover our tours</a>
         </div>
 
     </header>
