--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 <body>
 
     <header class="header">
-        <div class="logo-box">
-            <img class="logo" src="img/logo-white.png" alt="Natours logo">
+        <div class="header__logo-box">
+            <img class="header__logo" src="img/logo-white.png" alt="Natours logo">
         </div>
 
-        <div class="text-box">
+        <div class="header__text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary-head">Outdoors</span>
-                <span class="heading-primary-sub">is where life
+                <span class="heading-primary--head">Outdoors</span>
+                <span class="heading-primary--sub">is where life
                     happens</span>
             </h1>
 
-            <a class="btn btn-white btn-hero" href="#">Discover our tours</a>
+            <a class="btn btn--white btn--hero" href="#">Discover our tours</a>
         </div>
 
     </header>
